@@ -1,3 +1,12 @@
+UNRELEASED, S3QL TIP
+
+  * Metadata about stored objects is now split into multiple fields,
+    so that no field is longer than 256 bytes. This makes S3QL
+    compatible with a wider range of storage providers.
+
+    Thanks to Stuart Wallace <stuart@wapbot.co.uk> for reporting this
+    issue.
+  
 2012-02-24, S3QL 1.10
 
   * The s3s, s3cs and gss backends have been removed. Use the new
